# morphing

./: CMakeLists.txt  README.md  build_and_run.sh
src/app/: Window.cpp  Window.h  main.cpp
src/app/shaders/: fragment.glsl  shaders.qrc  vertex.glsl
src/base/: Camera.cpp  Camera.h  GLWidget.cpp  GLWidget.h  MorphModel.cpp  MorphModel.h
